Thu Sep 16 23:47:36 2004  Tim Janik  <timj@gtk.org>

	* data/beast.xml.in: install mime type definitions.

Thu Sep 16 23:21:58 2004  Tim Janik  <timj@gtk.org>

	* configure.in: added helper macros to implement libmad specific
	mime registration. provide UPDATE_MIME_DATABASE.

	* data/Makefile.am: added missing CLEANFILES. install beast.xml
	mime information file and invoke update-mime-database. 

	* data/beast.applications: removed from CVS, this is now generated
	from data/beast.applications.in.

	* data/beast.applications.in: provide libmad sensitive mime
	handling information.

	* data/bse.keys.in: minor fixups.

Thu Sep 16 16:03:46 2004  Tim Janik  <timj@gtk.org>

	* tests/testplugin.cc: adapt to recent changes.

Wed Sep 15 17:02:38 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/bsefextract.cc: Added --avg-energy feature, which extracts the
	average signal energy in dB.

Tue Sep 14 19:05:02 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstparam-automation.c: use BseMidiControlType for
	automation controls. changed abbreviation format, runtime adapt
	tooltips.

Tue Sep 14 13:35:26 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstparam-automation.c: new parameter type, to adjust 
	automation settings of a property.

	* beast-gtk/bstparam.[hc]: introduce bst_param_new_value() which
	wraps bst_param_new_value(), but also enables size grouping for
	the parameter editors.
	bst_param_create_gmask(): create automation editor for :automate:
	properties.

	* beast-gtk/gxk/gxkparam.[hc]: support temorary GUI readonly flag.

	* beast-gtk/gxk/gxkutils.[hc]:
	gxk_widget_proxy_requisition(): request extra vscrollbar space only if
	horizontal downscaling is disabled. same for vertical dimension.
	gxk_scrolled_window_create(): removed useless argument changed callers.

Mon Sep 13 21:52:07 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/gxkutils.[hc]: removed gxk_object_derive(), a suitable
	replacement is provided by G_DEFINE_TYPE(), fixed callers.
